[MongoR] Recording checksums files are invalid; insufficient test coverage

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Example:

          0
      foo/1769464514001.bin    0
      foo/1769464808435.bin    0
      foo/1769465096371.bin    0
      

      There is an errant entry with no filename, and the checksums are clearly not updated.

      This is clearly unguarded by tests.

            Assignee:
            James Harrison
            Reporter:
            James Harrison
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: