SERVER-117893: Correct recording checksum file; improve test coverage (#47056)

GitOrigin-RevId: a5b6d572e5d9a8a9b79fbd670c0fef6ed00510d8